# web-capture

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
tests/: test_web_capture.py
web_capture/: __init__.py  core.py
